test/compile-fail/resolution/use/no-path/expected.txt
error: unresolved item `a`
  ┌─ ./test/compile-fail/resolution/use/no-path/top.rhdl:1:5
  │
1 │ use a::b;
  │     ^ no `a` item

